--- a/patches/ref_omap2plus_defconfig
+++ b/patches/ref_omap2plus_defconfig
@@ -1,13 +1,13 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm 4.19.191 Kernel Configuration
+# Linux/arm 4.19.206 Kernel Configuration
 #
 
 #
-# Compiler: arm-linux-gnueabi-gcc (GCC) 8.4.0
+# Compiler: arm-linux-gnueabi-gcc (GCC) 8.5.0
 #
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=80400
+CONFIG_GCC_VERSION=80500
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_HAS_ASM_GOTO=y
 CONFIG_IRQ_WORK=y
@@ -872,6 +872,7 @@ CONFIG_NET_INGRESS=y
 CONFIG_PACKET=y
 # CONFIG_PACKET_DIAG is not set
 CONFIG_UNIX=y
+CONFIG_UNIX_SCM=y
 # CONFIG_UNIX_DIAG is not set
 # CONFIG_TLS is not set
 CONFIG_XFRM=y
@@ -2612,6 +2613,7 @@ CONFIG_CHARGER_BQ24735=m
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_CHARGER_TPS65217 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
+# CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
 CONFIG_HWMON=m
 # CONFIG_HWMON_DEBUG_CHIP is not set
