--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ image: robertcnelson/debian-bullseye-slim-ti-linux-kernel-dev:latest
 build:
   stage: build
   script:
+    - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
     - echo "CORES=12" >> system.sh
