--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,16 +5,16 @@ build:
   script:
     - . version.sh && echo $BRANCH
     - ccache -s
-    - mkdir -p /mnt/yocto-cache/ccache/$BRANCH/ || true
-    - mkdir -p /root/.cache/ccache/ ; rsync -aHAXx /mnt/yocto-cache/ccache/$BRANCH/* /root/.cache/ccache/ || true
+    - mkdir -p /root/.cache/ccache/
+    - tar -xf /mnt/yocto-cache/ccache/ccache-$BRANCH.tar.gz -C / || true
     - ccache -s
     - cp -v system.sh.sample system.sh
     - echo "AUTO_BUILD=1" >> system.sh
     - echo "CORES=12" >> system.sh
     - ./build_deb.sh
     - ccache -s
-    - mkdir -p /mnt/yocto-cache/ccache/$BRANCH/ || true
-    - rsync -aHAXx --no-o --no-g --no-perms --omit-dir-times --usermap=1000:1000 /root/.cache/ccache/* /mnt/yocto-cache/ccache/$BRANCH/ --delete || true
+    - tar -cf ccache-$BRANCH.tar.gz /root/.cache/ccache/
+    - cp -v ccache-$BRANCH.tar.gz /mnt/yocto-cache/ccache/ || true
   artifacts:
     paths:
       - "deploy/linux-image-*.deb"
